Set cursor style to pointer for label-tag

--- a/domain-search/assets/css/custom.css
+++ b/domain-search/assets/css/custom.css
@@ -39,3 +39,8 @@ body {
     cursor: pointer;
     z-index: 1337; /* High z-index to make sure it's always clickable */
 }
+
+/* Set cursor style to "pointer" ("hand") to indicate its clickable */
+label {
+    cursor: pointer;
+}
