Add cursor: pointer to checkboxes

--- a/domain-search/assets/css/custom.css
+++ b/domain-search/assets/css/custom.css
@@ -41,6 +41,6 @@ body {
 }
 
 /* Set cursor style to "pointer" ("hand") to indicate its clickable */
-label {
+label, input[type="checkbox"] {
     cursor: pointer;
 }
