--- a/domain-search/assets/css/custom.css
+++ b/domain-search/assets/css/custom.css
@@ -22,25 +22,30 @@ body {
     right: 0;
     bottom: 0;
     left: 0;
-    background: rgba(0, 0, 0, 0.5); /* Semi-transparent black background */
-    z-index: 1050; /* Make sure it's above most other elements */
+    background: rgba(0, 0, 0, 0.5);
+    /* Semi-transparent black background */
+    z-index: 1050;
+    /* Make sure it's above most other elements */
 }
 
 /* Scroll to Top Button Styles */
 #toTop {
     /* Button to scroll to the top of the page */
     position: fixed;
-    bottom: 80px;
+    bottom: 60px;
     right: 20px;
-    display: none; /* Initially hidden, shown when scrolling down */
+    display: none;
+    /* Initially hidden, shown when scrolling down */
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    z-index: 1337; /* High z-index to make sure it's always clickable */
+    z-index: 1337;
+    /* High z-index to make sure it's always clickable */
 }
 
 /* Set cursor style to "pointer" ("hand") to indicate its clickable */
-label, input[type="checkbox"] {
+label,
+input[type="checkbox"] {
     cursor: pointer;
 }
